--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidProficiencyExercise</string>
+    <string name="network_error">Please check your network connection</string>
 </resources>
