--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">AndroidProficiencyExercise</string>
     <string name="network_error">Please check your network connection</string>
+    <string name="please_wait">please wait...</string>
 </resources>
